# ct-segmentation-monai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02a_seg_baseline.ipynb  02b_seg_pca.ipynb  02c_seg_unet.ipynb
src/ct_segmentation_monai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: download_data.py  transform.py
src/models/: unet.py
src/training/: train.py
src/utils/: plotting.py
