[project]
name = "ct-segmentation-monai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "monai>=1.5.1",
    "nibabel>=5.3.3",
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]
